fix misaligned text

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -34,7 +34,7 @@ img {
 
 .plant-container {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   gap: 52px;
 }
 
@@ -44,4 +44,5 @@ img {
   justify-content: center;
   align-items: center;
   flex: 1 1 200px;
+  text-align: center;
 }
